ui: fix wrapping for long URLs

--- a/public/static/style.css
+++ b/public/static/style.css
@@ -95,7 +95,7 @@ input {
 #lists {
 	width: 100%;
 	margin-top: 2em;
-	word-wrap: break-word;
+	word-wrap: anywhere;
 }
 
 #lists h2 {
